--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,24 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+            browser: chrome
+            record: true
+            parallel: true
+            group: "Chrome"
+            spec: cypress/e2e/1-getting-started/*cy.js
+        env:
+            ENV: "pr"
+            USERNAME: ${{ secrets.USER }}
       - uses: actions/upload-artifact@v4
         # add the line below to store screenshots only on failures
-        # if: failure()
+        if: failure()
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
       - uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: cypress-videos
           path: cypress/videos
