--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
             browser: chrome
-            record: true
+            record: false
             parallel: true
             group: "Chrome"
             spec: cypress/e2e/1-getting-started/*cy.js
